Document PPDG/src/objects/Business_Contacts__c.object
<CustomObject>
    <description>Intermediary contact management.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Vendor_Review_Date__c</fullName>
        <label>Alternative Vendor Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternative_Vendor__c</fullName>
        <label>Alternative Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Performance_Summary__c</fullName>
        <inlineHelpText>Recap the overall performance of the supplier versus SLA’s , costs and service reviews and contract reviews</inlineHelpText>
        <label>Annual Performance Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Annual_Spend__c</fullName>
        <label>Annual Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending - Back to BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending - Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending - Executive Sign off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De-authorised</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_they_directly_authorised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are they directly authorised?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_they_part_of_a_club__c</fullName>
        <label>Are they part of a club?</label>
        <picklist>
            <picklistValues>
                <fullName>Paradigm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal and General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMPD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_they_part_of_a_network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are they part of a network?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Background_of_Intermediary__c</fullName>
        <label>Background of Intermediary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCL_Issue_Date__c</fullName>
        <label>CCL Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCL_Number__c</fullName>
        <label>CCL Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_of_Registration__c</fullName>
        <label>City of Registration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>For use with Operations Sharia Approved Contracts Log</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_Vendor__c</fullName>
        <label>Comments on Vendor</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Location__c</fullName>
        <label>Contract Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <description>For use with Operations Sharia Approved Contracts Log</description>
        <label>Contract Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_of_Contract_Per_Annum__c</fullName>
        <label>Cost of Contract Per Annum</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country_of_Registration__c</fullName>
        <label>Country of Registration</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criticality_criteria_applied__c</fullName>
        <label>Criticality criteria applied</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not contracted yet</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <inlineHelpText>Date application was signed by the Intermediary</inlineHelpText>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>Date application was signed by Sultan</inlineHelpText>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_app_received__c</fullName>
        <label>Date app received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disaster_Recovery__c</fullName>
        <label>Disaster Recovery?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_of_contract__c</fullName>
        <label>Duration of contract (in months)</label>
        <picklist>
            <picklistValues>
                <fullName>Rolling contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay as you go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FSA_Number__c</fullName>
        <label>FSA Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Billing__c</fullName>
        <label>Frequency of Billing</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IBB_Contract_Review_Date__c</fullName>
        <label>Al Rayan Bank Contract Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IT Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Cat_B_registration_type__c</fullName>
        <label>If Cat B, registration type?</label>
        <picklist>
            <picklistValues>
                <fullName>Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Yes_Please_provide_details__c</fullName>
        <label>If Yes, Please provide details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_Club_what_is_it__c</fullName>
        <label>If other Club, which one?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_Network_which_one__c</fullName>
        <label>If other Network, which one?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_so_which_network_are_they_part_of__c</fullName>
        <label>If so, which network are they part of?</label>
        <picklist>
            <picklistValues>
                <fullName>Pink Home Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intrinsic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loans Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Introducer_Code__c</fullName>
        <inlineHelpText>first 3 letters of company name and add 1 to number on previous record</inlineHelpText>
        <label>Introducer Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introducer_Name_2__c</fullName>
        <label>Introducer Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introducer_Name_3__c</fullName>
        <label>Introducer Name 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introducer_Name_4__c</fullName>
        <label>Introducer Name 4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Any_Data_Outsourced__c</fullName>
        <label>Is Any Data Outsourced?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Harm_Conduct_risk_identified__c</fullName>
        <label>Key Harm/Conduct risk identified</label>
        <picklist>
            <picklistValues>
                <fullName>Operational Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer service delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Risk</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Key_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Vendor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <label>Last Relationship Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Tendered__c</fullName>
        <label>Last Tendered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_of_the_outsourced_activity__c</fullName>
        <label>Location of the outsourced activity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Contact_Email__c</fullName>
        <label>Main Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mitigating_actions__c</fullName>
        <label>Mitigating actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Review_date__c</fullName>
        <label>Next Relationship Review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outsourced_chain__c</fullName>
        <label>Outsourced chain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_department__c</fullName>
        <label>Owner department</label>
        <picklist>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Change Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk, Compliance &amp; FCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasury</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paid_in_Arrears__c</fullName>
        <label>Paid in Arrears?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type_Method__c</fullName>
        <label>Payment Type/Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_of_Contract__c</fullName>
        <label>Period of Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permissions__c</fullName>
        <label>Permissions</label>
        <picklist>
            <picklistValues>
                <fullName>Referral only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaged apps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Ranking__c</fullName>
        <label>Priority Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proc_Fee__c</fullName>
        <label>Proc Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Regulatory_Authority__c</fullName>
        <label>Regulatory Authority</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager_Contact_at_Vendor__c</fullName>
        <label>Relationship Manager/Contact at Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <label>Relationship Manager</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with Sharia Approved Contracts Log</description>
        <label>Reviewer Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_of_Vendor__c</fullName>
        <label>Role of Vendor</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sign_off_Date__c</fullName>
        <description>For use with Sharia Approved Contracts Log</description>
        <label>Sign off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sort_code__c</fullName>
        <label>Sort code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Mobile__c</fullName>
        <label>Telephone Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_Office__c</fullName>
        <label>Telephone Office</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Termination__c</fullName>
        <label>Termination</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Terms_Clauses__c</fullName>
        <label>Terms/Clauses</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <label>Type of Business</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Contact__c</fullName>
        <label>Type of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Intermediary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Contract__c</fullName>
        <description>For use with Operations Sharia Approved Contracts Log</description>
        <label>Type of Contract</label>
        <picklist>
            <picklistValues>
                <fullName>New Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal of Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Relationship__c</fullName>
        <label>Type of Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Outsource Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third party</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Servic__c</fullName>
        <label>Type of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_performance__c</fullName>
        <label>Vendor performance</label>
        <picklist>
            <picklistValues>
                <fullName>Exceeded expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below expectations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_will_get_paf__c</fullName>
        <description>If intermediary is not part of a network, then choose Intermediary</description>
        <inlineHelpText>If intermediary is not part of a network, then choose Intermediary</inlineHelpText>
        <label>Who will get paid?</label>
        <picklist>
            <picklistValues>
                <fullName>Intermediary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Contacts</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Relationship_Manager__c</field>
            <operation>equals</operation>
            <value>Saquib Ismail</value>
        </filters>
        <label>saquib&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owner_department__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IT_Change_Delivery_suppliers</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Key_Vendor__c</columns>
        <columns>Renewal_Date__c</columns>
        <columns>Relationship_Manager_Contact_at_Vendor__c</columns>
        <columns>Owner_department__c</columns>
        <columns>Vendor_performance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Contacts__c.Vendors</value>
        </filters>
        <filters>
            <field>Owner_department__c</field>
            <operation>equals</operation>
            <value>IT &amp; Change Delivery</value>
        </filters>
        <label>IT &amp; Change Delivery suppliers</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Key_Vendors_2</fullName>
        <columns>NAME</columns>
        <columns>Key_Vendor__c</columns>
        <columns>Role_of_Vendor__c</columns>
        <columns>Period_of_Contract__c</columns>
        <columns>Terms_Clauses__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Key_Vendor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Key Vendors 2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Operations_Approved_Sharia_Log</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contact_Name__c</columns>
        <columns>Type_of_Contract__c</columns>
        <columns>Sign_off_Date__c</columns>
        <columns>Contract_Name__c</columns>
        <columns>Reviewer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Contacts__c.Operations_Sharia_Approved_Contracts_Log</value>
        </filters>
        <label>Operations Approved Sharia Log</label>
    </listViews>
    <listViews>
        <fullName>Vendors</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Manager_Contact_at_Vendor__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Key_Vendor__c</columns>
        <columns>Annual_Performance_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Contacts__c.Vendors</value>
        </filters>
        <label>Vendors</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Contacts</pluralLabel>
    <recordTypes>
        <fullName>IT_Contacts</fullName>
        <active>false</active>
        <label>IT Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Intermediary_contacts</fullName>
        <active>true</active>
        <label>Intermediary contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operations_Sharia_Approved_Contracts_Log</fullName>
        <active>true</active>
        <description>To be used by Operations to log all Sharia approved contracts.</description>
        <label>Operations Sharia Approved Contracts Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendors</fullName>
        <active>true</active>
        <description>Used to list all vendors and to ensure reviews are undertaken.</description>
        <label>Vendors</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Data_outsourced</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Is_Any_Data_Outsourced__c) = &quot;Yes&quot;,
ISBLANK(If_Yes_Please_provide_details__c))</errorConditionFormula>
        <errorDisplayField>If_Yes_Please_provide_details__c</errorDisplayField>
        <errorMessage>Please provide details of the data being outsourced.</errorMessage>
    </validationRules>
</CustomObject>